docs/api/qiskit/0.43/qiskit.circuit.SwitchCaseOp.md
---
title: SwitchCaseOp
description: API reference for qiskit.circuit.SwitchCaseOp
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.SwitchCaseOp
---

# SwitchCaseOp

<span id="qiskit.circuit.SwitchCaseOp" />

`SwitchCaseOp(target, cases, *, label=None)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/circuit/controlflow/switch_case.py "view source code")

Bases: [`ControlFlowOp`](qiskit.circuit.ControlFlowOp "qiskit.circuit.controlflow.control_flow.ControlFlowOp")

A circuit operation that executes one particular circuit block based on matching a given `target` against an ordered list of `values`. The special value `CASE_DEFAULT` can be used to represent a default condition.

This is the low-level interface for creating a switch-case statement; in general, the circuit method `QuantumCircuit.switch_case()` should be used as a context manager to access the builder interface. At the low level, you must ensure that all the circuit blocks contain equal numbers of qubits and clbits, and that the order the virtual bits of the containing circuit should be bound is the same for all blocks. This will likely mean that each circuit block is wider than its natural width, as each block must span the union of all the spaces covered by \_any\_ of the blocks.

**Parameters**

*   **target** ([*Clbit*](qiskit.circuit.Clbit "qiskit.circuit.classicalregister.Clbit")  *|*[*ClassicalRegister*](qiskit.circuit.ClassicalRegister "qiskit.circuit.classicalregister.ClassicalRegister")) – the runtime value to switch on.
*   **cases** (*Iterable\[Tuple\[Any,* [*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.quantumcircuit.QuantumCircuit")*]]*) – an ordered iterable of the corresponding value of the `target` and the circuit block that should be executed if this is matched. There is no fall-through between blocks, and the order matters.

Create a new instruction.

**Parameters**

*   **name** (*str*) – instruction name
*   **num\_qubits** (*int*) – instruction’s qubit width
*   **num\_clbits** (*int*) – instruction’s clbit width
*   **params** (*list\[int|float|complex|str|ndarray|list|*[*ParameterExpression*](qiskit.circuit.ParameterExpression "qiskit.circuit.ParameterExpression")*]*) – list of parameters
*   **duration** (*int or float*) – instruction’s duration. it must be integer if `unit` is ‘dt’
*   **unit** (*str*) – time unit of duration
*   **label** (*str or None*) – An optional label for identifying the instruction.

**Raises**

*   **CircuitError** – when the register is not in the correct format.
*   **TypeError** – when the optional label is provided, but it is not a string.

## Methods

<span id="qiskit-circuit-switchcaseop-add-decomposition" />

### add\_decomposition

<span id="qiskit.circuit.SwitchCaseOp.add_decomposition" />

`SwitchCaseOp.add_decomposition(decomposition)`

Add a decomposition of the instruction to the SessionEquivalenceLibrary.

<span id="qiskit-circuit-switchcaseop-assemble" />

### assemble

<span id="qiskit.circuit.SwitchCaseOp.assemble" />

`SwitchCaseOp.assemble()`

Assemble a QasmQobjInstruction

<span id="qiskit-circuit-switchcaseop-broadcast-arguments" />

### broadcast\_arguments

<span id="qiskit.circuit.SwitchCaseOp.broadcast_arguments" />

`SwitchCaseOp.broadcast_arguments(qargs, cargs)`

Validation of the arguments.

**Parameters**

*   **qargs** (*List*) – List of quantum bit arguments.
*   **cargs** (*List*) – List of classical bit arguments.

**Yields**

*Tuple(List, List)* – A tuple with single arguments.

**Raises**

**CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.

<span id="qiskit-circuit-switchcaseop-c-if" />

### c\_if

<span id="qiskit.circuit.SwitchCaseOp.c_if" />

`SwitchCaseOp.c_if(classical, val)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/circuit/controlflow/switch_case.py "view source code")

Set a classical equality condition on this instruction between the register or cbit `classical` and value `val`.

<Admonition title="Note" type="note">
  This is a setter method, not an additive one. Calling this multiple times will silently override any previously set condition; it does not stack.
</Admonition>

<span id="qiskit-circuit-switchcaseop-cases" />

### cases

<span id="qiskit.circuit.SwitchCaseOp.cases" />

`SwitchCaseOp.cases()` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/circuit/controlflow/switch_case.py "view source code")

Return a lookup table from case labels to the circuit that would be executed in that case. This object is not generally suitable for creating a new [`SwitchCaseOp`](qiskit.circuit.SwitchCaseOp "qiskit.circuit.SwitchCaseOp") because any keys that point to the same object will not be grouped.

<Admonition title="See also" type="note">
  #### [`SwitchCaseOp.cases_specifier()`](qiskit.circuit.SwitchCaseOp#cases_specifier "qiskit.circuit.SwitchCaseOp.cases_specifier")

  An alternate method that produces its output in a suitable format for creating new [`SwitchCaseOp`](qiskit.circuit.SwitchCaseOp "qiskit.circuit.SwitchCaseOp") instances.
</Admonition>

<span id="qiskit-circuit-switchcaseop-cases-specifier" />

### cases\_specifier

<span id="qiskit.circuit.SwitchCaseOp.cases_specifier" />

`SwitchCaseOp.cases_specifier()` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/circuit/controlflow/switch_case.py "view source code")

Return an iterable where each element is a 2-tuple whose first element is a tuple of jump values, and whose second is the single circuit block that is associated with those values.

This is an abstract specification of the jump table suitable for creating new [`SwitchCaseOp`](qiskit.circuit.SwitchCaseOp "qiskit.circuit.SwitchCaseOp") instances.

<Admonition title="See also" type="note">
  #### [`SwitchCaseOp.cases()`](qiskit.circuit.SwitchCaseOp#cases "qiskit.circuit.SwitchCaseOp.cases")

  Create a lookup table that you can use for your own purposes to jump from values to the circuit that would be executed.
</Admonition>

**Return type**

*Iterable*\[*Tuple*\[*Tuple*, [*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.quantumcircuit.QuantumCircuit")]]

<span id="qiskit-circuit-switchcaseop-copy" />

### copy

<span id="qiskit.circuit.SwitchCaseOp.copy" />

`SwitchCaseOp.copy(name=None)`

Copy of the instruction.

**Parameters**

**name** (*str*) – name to be given to the copied circuit, if `None` then the name stays the same.

**Returns**

a copy of the current instruction, with the name updated if it was provided

**Return type**

[qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

<span id="qiskit-circuit-switchcaseop-inverse" />

### inverse

<span id="qiskit.circuit.SwitchCaseOp.inverse" />

`SwitchCaseOp.inverse()`

Invert this instruction.

If the instruction is composite (i.e. has a definition), then its definition will be recursively inverted.

Special instructions inheriting from Instruction can implement their own inverse (e.g. T and Tdg, Barrier, etc.)

**Returns**

a fresh instruction for the inverse

**Return type**

[qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

**Raises**

**CircuitError** – if the instruction is not composite and an inverse has not been implemented for it.

<span id="qiskit-circuit-switchcaseop-is-parameterized" />

### is\_parameterized

<span id="qiskit.circuit.SwitchCaseOp.is_parameterized" />

`SwitchCaseOp.is_parameterized()`

Return True .IFF. instruction is parameterized else False

<span id="qiskit-circuit-switchcaseop-qasm" />

### qasm

<span id="qiskit.circuit.SwitchCaseOp.qasm" />

`SwitchCaseOp.qasm()`

Return a default OpenQASM string for the instruction.

Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).

<span id="qiskit-circuit-switchcaseop-repeat" />

### repeat

<span id="qiskit.circuit.SwitchCaseOp.repeat" />

`SwitchCaseOp.repeat(n)`

Creates an instruction with gate repeated n amount of times.

**Parameters**

**n** (*int*) – Number of times to repeat the instruction

**Returns**

Containing the definition.

**Return type**

[qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

**Raises**

**CircuitError** – If n \< 1.

<span id="qiskit-circuit-switchcaseop-replace-blocks" />

### replace\_blocks

<span id="qiskit.circuit.SwitchCaseOp.replace_blocks" />

`SwitchCaseOp.replace_blocks(blocks)` [GitHub](https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/circuit/controlflow/switch_case.py "view source code")

Replace blocks and return new instruction. :param blocks: Tuple of QuantumCircuits to replace in instruction.

**Returns**

New ControlFlowOp with replaced blocks.

**Return type**

[*SwitchCaseOp*](qiskit.circuit.SwitchCaseOp "qiskit.circuit.controlflow.switch_case.SwitchCaseOp")

<span id="qiskit-circuit-switchcaseop-reverse-ops" />

### reverse\_ops

<span id="qiskit.circuit.SwitchCaseOp.reverse_ops" />

`SwitchCaseOp.reverse_ops()`

For a composite instruction, reverse the order of sub-instructions.

This is done by recursively reversing all sub-instructions. It does not invert any gate.

**Returns**

**a new instruction with**

sub-instructions reversed.

**Return type**

[qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

<span id="qiskit-circuit-switchcaseop-soft-compare" />

### soft\_compare

<span id="qiskit.circuit.SwitchCaseOp.soft_compare" />

`SwitchCaseOp.soft_compare(other)`

Soft comparison between gates. Their names, number of qubits, and classical bit numbers must match. The number of parameters must match. Each parameter is compared. If one is a ParameterExpression then it is not taken into account.

**Parameters**

**other** (*instruction*) – other instruction.

**Returns**

are self and other equal up to parameter expressions.

**Return type**

bool

<span id="qiskit-circuit-switchcaseop-validate-parameter" />

### validate\_parameter

<span id="qiskit.circuit.SwitchCaseOp.validate_parameter" />

`SwitchCaseOp.validate_parameter(parameter)`

Instruction parameters has no validation or normalization.

## Attributes

<span id="qiskit.circuit.SwitchCaseOp.blocks" />

### blocks

<span id="qiskit.circuit.SwitchCaseOp.condition_bits" />

### condition\_bits

Get Clbits in condition.

<span id="qiskit.circuit.SwitchCaseOp.decompositions" />

### decompositions

Get the decompositions of the instruction from the SessionEquivalenceLibrary.

<span id="qiskit.circuit.SwitchCaseOp.definition" />

### definition

Return definition in terms of other basic gates.

<span id="qiskit.circuit.SwitchCaseOp.duration" />

### duration

Get the duration.

<span id="qiskit.circuit.SwitchCaseOp.label" />

### label

Return instruction label

<span id="qiskit.circuit.SwitchCaseOp.name" />

### name

Return the name.

<span id="qiskit.circuit.SwitchCaseOp.num_clbits" />

### num\_clbits

Return the number of clbits.

<span id="qiskit.circuit.SwitchCaseOp.num_qubits" />

### num\_qubits

Return the number of qubits.

<span id="qiskit.circuit.SwitchCaseOp.params" />

### params

return instruction params.

<span id="qiskit.circuit.SwitchCaseOp.unit" />

### unit

Get the time unit of duration.

